# RVAT

./: .gitignore  README.md  build.sh  install-envreqs.sh  install-modules.sh  install-uav-envs.sh  modelInputs.proto  requirements.txt  run_verify.sh  set_env.sh  tcfa-data-valuation.md  verify-api.py
InterpreterR/: CMakeLists.txt  InterpreterR.cpp  base.cpp  testMain.cpp
InterpreterR/ExecutionEngine/: ExecutionEngine.cpp  ExecutionEngine.h  GenericValue.h
InterpreterR/Interpreter/: CFAExecution.cpp  Execution.cpp  ExternalFunctions.cpp  InstrsInterpreter.cpp  InstrsInterpreter.h  Interpreter.cpp  Interpreter.h
InterpreterR/base/: base.h  params_config.yml  px4_union_config.yml
InterpreterR/model/: CFABuilder.cpp  CFAModel.h  CFAModelFactory.cpp  CFAModelFactory.h
InterpreterR/test/: call_test.ll  complex_phi_example.ll  example.ll  phi_example.ll  printf_test.ll  recursive_call_test.ll  simple_cfa_interpreter_test.ll  simple_cfa_test.ll  struct_load_manual.ll  struct_load_opt.ll  struct_load_simple.ll  struct_load_test.ll  testMain.cpp  test_atomic.ll  test_call_phi_branch.ll  test_phi_example.ll  test_type_test.ll
KLEE/: CMakeLists.txt  README.txt  kleeEntryBuilder.cpp  kleeEntryBuilder.hh  main.cpp
KLEE/test/: klee_test.c  klee_test.ll
cmake_deps/: boost.cmake  llvm.cmake  sharedUtils.cmake  svf.cmake  yaml-cpp.cmake
configs/: IR_config.yml  arduDMATypeAdd.yml  arduInCalls.yml  arduInCallsAdd.txt  arduInCallsAdd.yml  arduMallocTypeAdd.txt  arducopter.ld  arducopter_params.json  ardupilot-property.json  properties_config.yml  property_slice_criterion.json  px4.ld  px4DMATypeAdd.yml  px4InCalls.yml  px4MallocTypeAdd.txt  verifications.yml
dependencies/: .gitignore  lib_build.sh
dependencies/SVF-3.1/: build.sh  clean.sh  setup.sh
git_patchs/: ardupilot.patch  klee.patch  llvm.patch  pgfuzz.patch  px4.patch
instrumenter/: .gitignore  CMakeLists.txt
instrumenter/heapMem/: Makefile  heaptrack.cpp
instrumenter/include/: instrumenter.hh
instrumenter/src/: basicBlockTimer.cpp  inputgetter.cpp  instrumenter.cpp  main.cpp
instrumenter/timeLogger/: Makefile  timeLogger.cpp
llvm-pdg/: C++_PDG_Specification.md  CMakeLists.txt  Makefile  README.md  set_svf_env.sh
llvm-pdg/include/: CallWrapper.hh  ControlDependencyGraph.hh  DataDependencyGraph.hh  DebugInfoUtils.hh  FunctionWrapper.hh  Graph.hh  GraphWriter.hh  IndirectCallPass.hh  LLVMEssentials.hh  PDGCallGraph.hh  PDGCommandLineOptions.hh  PDGEdge.hh  PDGEnums.hh  PDGNode.hh  PDGUtils.hh  ProgramDependencyGraph.hh  Tree.hh  run-api.hh
llvm-pdg/src/: CallWrapper.cpp  ControlDependencyGraph.cpp  DataDependencyGraph.cpp  DebugInfoUtils.cpp  FunctionWrapper.cpp  Graph.cpp  GraphWriter.cpp  IndirectCallPass.cpp  Main.cpp  PDGCallGraph.cpp  PDGNode.cpp  PDGUtils.cpp  ProgramDependencyGraph.cpp  Tree.cpp
llvm-pdg/test/c++_tests/: testException.cpp
llvm-pdg/test/mc_test/: bubble_sort.cpp  bubble_sort.ll  fast_sort.cpp  fast_sort.ll  lib.cpp  lib.ll
llvm-pdg/test/pdg_test/: test_ind_call.c  test_ind_call.ll
modelTempGen/: .gitignore  CMakeLists.txt
modelTempGen/include/: globalVarsInfo.h  modelInputTempGen.h  structExpander.h
modelTempGen/src/: Main.cpp  ModelInputTempGen.cpp  globalVarsInfo.cpp  structExpander.cpp
preAnalyzer/: CMakeLists.txt  run.sh
preAnalyzer/include/: Analyzer.h  CallGraph.h  Common.h  inCallUtil.hh  svfAndersen.hh  vCallAnalysis.hh
preAnalyzer/src/: Analyzer.cc  CallGraph.cc  Common.cc  addTargetsMD.cpp  findVirtualtargets.cpp  inCallAnalysis.cpp  inCallSVF.cpp
prompts/: prompts.md  tab:prompt_conversion.md  tab:prompt_rag.md  tab:prompt_refine.md
properties/: properties.md  tab:RVAST_vs_PGFuzz.md  tab:ardupilot_properties.md  tab:px4_properties.md  tab:violation_report.md
pyscript/: __init__.py
pyscript/LLM/property_extraction/: LLMClient.py  UAVDocPropertyUtils.py  __init__.py  similarity_threshold_selection.py
pyscript/LLM/property_extraction/data/: Finder_Prompt.txt  arducopter_properties.json  copter_deepseek_property_specifications.json  copter_openrouter_property_specifications.json  copter_property_clusters.json  copter_property_clusters_check.json  px4_deepseek_property_specifications.json  px4_openrouter_property_specifications.json  px4_properties.json  px4_property_clusters.json  px4_property_clusters_check.json
pyscript/LLM/property_extraction/data/ardupilot_doc_pairs/: ardupilot.csv  copter.csv  dev.csv  plane.csv  rover.csv
pyscript/LLM/property_extraction/data/px4_doc_pairs/: px4.csv
pyscript/LLM/slice_criteria_rag/: LLMGenerator.py  chunking.py  main.py  prompts.py  vectorDB.py
pyscript/initializer/: deserialize_to_xml.py  extract_type_hash.py  initModelInputSeed.py  modelImputsBuilder.py  modelInputs_pb2.py  parseTimeConstraint.py  plotBlockSizeCDF.py  plotCoverageLinechart.py  ~initModelInput.py
pyscript/initializer/pygev/: __init__.py  gev.py
pyscript/initializer/pygev/extremes/: __init__.py  block_maxima.py  extremes.py  transformation.py
pyscript/initializer/pygev/models/: __init__.py  distribution.py  model_base.py  model_mle.py  models.py
pyscript/initializer/pygev/plotting/: __init__.py  extremes.py
pyscript/modelTrans/: llvmtouppaal.py
pyscript/pyTools/: createIRConfig.py  createTemplates.py  elf_parser.py  flightControlBuilder.py  funcSumDataBase.py  merge_incalls.py  parseConfig.py  utils.py
pyscript/pyTools/draw_tools/: draw_case2.py  draw_case2_failsafe_on.py  draw_case3.py  draw_fs_time_series.py  manual_control_setpoint_plot.py
sharedUtils/: CMakeLists.txt
sharedUtils/include/: config_parse.hpp  func_worklist.hpp  user_utils.hh
sharedUtils/src/: sharedUtils.cpp
